Fix select bug on Chrome
On Chrome, when I tried to use the scrollbars, it would start a "lasso" for
selecting items inside the list. The solution is to move the overflow:auto
property to a container div, and set overflow:visible on the ul itself.

--- a/web/appDev/widgets/appdev_option_twocolumn/appdev_option_twocolumn.css
+++ b/web/appDev/widgets/appdev_option_twocolumn/appdev_option_twocolumn.css
@@ -1,16 +1,17 @@
 
 .appdev-option-twocolumn ul {
-    border: 1px solid #B0B0B0;
-/*    margin: 0.2em;*/
-    max-height: 10em;
-    min-height: 7em;
-    overflow-x: hidden;
-    overflow-y: auto;
+    overflow: visible;
     padding: 0.3em;
     vertical-align: middle;
-    width: 97% !important;
+    width: 90% !important;
     margin-left:0px;
-    float: none;
+}
+
+.appdev-option-twocolumn .ulContainer {
+    overflow-y: auto;
+    max-height: 10em;
+    min-height: 7em;
+    border: 1px solid #B0B0B0;
 }
 
 .appdev-option-twocolumn .loading-indicator {
